// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddDraftAction add Foo 1`] = `
Object {
  "activeEntityEditorScrollSignal": 1,
  "activeEntityId": "619725d7-e583-4544-8bb0-23fc3c2870c0",
  "activeEntityMenuScrollSignal": 1,
  "drafts": Array [
    Object {
      "draft": Object {
        "authKey": null,
        "entitySpec": Object {
          "adminOnly": false,
          "fields": Array [
            Object {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
        "fields": Array [
          Object {
            "fieldSpec": Object {
              "name": "title",
              "type": "String",
            },
            "value": null,
          },
        ],
        "name": "",
      },
      "entity": null,
      "entityWillBeUpdatedDueToUpsert": false,
      "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
      "status": "",
    },
  ],
  "schema": AdminSchema {
    "spec": Object {
      "entityTypes": Array [
        Object {
          "adminOnly": false,
          "fields": Array [
            Object {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
      ],
      "valueTypes": Array [],
    },
  },
  "status": "",
}
`;

exports[`DeleteDraftAction add/delete Foo 1`] = `
Object {
  "activeEntityEditorScrollSignal": 1,
  "activeEntityId": null,
  "activeEntityMenuScrollSignal": 1,
  "drafts": Array [],
  "schema": AdminSchema {
    "spec": Object {
      "entityTypes": Array [
        Object {
          "adminOnly": false,
          "fields": Array [
            Object {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
      ],
      "valueTypes": Array [],
    },
  },
  "status": "",
}
`;

exports[`EntityEditorReducer scenarios add new draft, set name and authKey, force update 1`] = `
Object {
  "activeEntityEditorScrollSignal": 1,
  "activeEntityId": "619725d7-e583-4544-8bb0-23fc3c2870c0",
  "activeEntityMenuScrollSignal": 1,
  "drafts": Array [
    Object {
      "draft": Object {
        "authKey": null,
        "entitySpec": Object {
          "adminOnly": false,
          "fields": Array [
            Object {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
        "fields": Array [
          Object {
            "fieldSpec": Object {
              "name": "title",
              "type": "String",
            },
            "value": null,
          },
        ],
        "name": "",
      },
      "entity": null,
      "entityWillBeUpdatedDueToUpsert": false,
      "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
      "status": "",
    },
  ],
  "schema": AdminSchema {
    "spec": Object {
      "entityTypes": Array [
        Object {
          "adminOnly": false,
          "fields": Array [
            Object {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
      ],
      "valueTypes": Array [],
    },
  },
  "status": "",
}
`;

exports[`EntityEditorReducer scenarios add new draft, set name and authKey, force update 2`] = `
Object {
  "activeEntityEditorScrollSignal": 1,
  "activeEntityId": "619725d7-e583-4544-8bb0-23fc3c2870c0",
  "activeEntityMenuScrollSignal": 1,
  "drafts": Array [
    Object {
      "draft": Object {
        "authKey": null,
        "entitySpec": Object {
          "adminOnly": false,
          "fields": Array [
            Object {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
        "fields": Array [
          Object {
            "fieldSpec": Object {
              "name": "title",
              "type": "String",
            },
            "value": null,
          },
        ],
        "name": "Foo name",
      },
      "entity": null,
      "entityWillBeUpdatedDueToUpsert": false,
      "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
      "status": "changed",
    },
  ],
  "schema": AdminSchema {
    "spec": Object {
      "entityTypes": Array [
        Object {
          "adminOnly": false,
          "fields": Array [
            Object {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
      ],
      "valueTypes": Array [],
    },
  },
  "status": "changed",
}
`;

exports[`EntityEditorReducer scenarios add new draft, set name and authKey, force update 3`] = `
Object {
  "activeEntityEditorScrollSignal": 1,
  "activeEntityId": "619725d7-e583-4544-8bb0-23fc3c2870c0",
  "activeEntityMenuScrollSignal": 1,
  "drafts": Array [
    Object {
      "draft": Object {
        "authKey": "none",
        "entitySpec": Object {
          "adminOnly": false,
          "fields": Array [
            Object {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
        "fields": Array [
          Object {
            "fieldSpec": Object {
              "name": "title",
              "type": "String",
            },
            "value": null,
          },
        ],
        "name": "Foo name",
      },
      "entity": null,
      "entityWillBeUpdatedDueToUpsert": false,
      "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
      "status": "changed",
    },
  ],
  "schema": AdminSchema {
    "spec": Object {
      "entityTypes": Array [
        Object {
          "adminOnly": false,
          "fields": Array [
            Object {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
      ],
      "valueTypes": Array [],
    },
  },
  "status": "changed",
}
`;

exports[`EntityEditorReducer scenarios add new draft, set name and authKey, force update 4`] = `
Object {
  "fields": Object {},
  "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
  "info": Object {
    "authKey": "none",
    "name": "Foo name",
    "type": "Foo",
  },
}
`;

exports[`EntityEditorReducer scenarios add new draft, set name and authKey, force update 5`] = `
Object {
  "activeEntityEditorScrollSignal": 1,
  "activeEntityId": "619725d7-e583-4544-8bb0-23fc3c2870c0",
  "activeEntityMenuScrollSignal": 1,
  "drafts": Array [
    Object {
      "draft": Object {
        "authKey": "none",
        "entitySpec": Object {
          "adminOnly": false,
          "fields": Array [
            Object {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
        "fields": Array [
          Object {
            "fieldSpec": Object {
              "name": "title",
              "type": "String",
            },
            "value": null,
          },
        ],
        "name": "Foo name",
      },
      "entity": null,
      "entityWillBeUpdatedDueToUpsert": true,
      "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
      "status": "changed",
    },
  ],
  "schema": AdminSchema {
    "spec": Object {
      "entityTypes": Array [
        Object {
          "adminOnly": false,
          "fields": Array [
            Object {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
      ],
      "valueTypes": Array [],
    },
  },
  "status": "changed",
}
`;

exports[`EntityEditorReducer scenarios add new draft, set name and authKey, force update 6`] = `
Object {
  "activeEntityEditorScrollSignal": 1,
  "activeEntityId": "619725d7-e583-4544-8bb0-23fc3c2870c0",
  "activeEntityMenuScrollSignal": 1,
  "drafts": Array [
    Object {
      "draft": Object {
        "authKey": "none",
        "entitySpec": Object {
          "adminOnly": false,
          "fields": Array [
            Object {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
        "fields": Array [
          Object {
            "fieldSpec": Object {
              "name": "title",
              "type": "String",
            },
            "value": null,
          },
        ],
        "name": "Foo name#123456",
      },
      "entity": Object {
        "fields": Object {
          "title": null,
        },
        "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
        "info": Object {
          "authKey": "none",
          "createdAt": "2022-04-30T07:51:25.56Z",
          "name": "Foo name#123456",
          "status": "draft",
          "type": "Foo",
          "updatedAt": "2022-04-30T07:51:25.56Z",
          "version": 0,
        },
      },
      "entityWillBeUpdatedDueToUpsert": true,
      "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
      "status": "",
    },
  ],
  "schema": AdminSchema {
    "spec": Object {
      "entityTypes": Array [
        Object {
          "adminOnly": false,
          "fields": Array [
            Object {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
      ],
      "valueTypes": Array [],
    },
  },
  "status": "",
}
`;

exports[`SetActiveEntityAction add two entities, set active to first 1`] = `
Object {
  "activeEntityEditorScrollSignal": 3,
  "activeEntityId": "619725d7-e583-4544-8bb0-23fc3c2870c0",
  "activeEntityMenuScrollSignal": 3,
  "drafts": Array [
    Object {
      "draft": Object {
        "authKey": null,
        "entitySpec": Object {
          "adminOnly": false,
          "fields": Array [],
          "name": "Foo",
        },
        "fields": Array [],
        "name": "",
      },
      "entity": null,
      "entityWillBeUpdatedDueToUpsert": false,
      "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
      "status": "",
    },
    Object {
      "draft": Object {
        "authKey": null,
        "entitySpec": Object {
          "adminOnly": false,
          "fields": Array [],
          "name": "Bar",
        },
        "fields": Array [],
        "name": "",
      },
      "entity": null,
      "entityWillBeUpdatedDueToUpsert": false,
      "id": "9516465b-935a-4cc7-8b97-ccaca81bbe9a",
      "status": "",
    },
  ],
  "schema": AdminSchema {
    "spec": Object {
      "entityTypes": Array [
        Object {
          "adminOnly": false,
          "fields": Array [],
          "name": "Foo",
        },
        Object {
          "adminOnly": false,
          "fields": Array [],
          "name": "Bar",
        },
      ],
      "valueTypes": Array [],
    },
  },
  "status": "",
}
`;

exports[`SetAuthKeyAction set authKey of new draft 1`] = `
Object {
  "activeEntityEditorScrollSignal": 1,
  "activeEntityId": "619725d7-e583-4544-8bb0-23fc3c2870c0",
  "activeEntityMenuScrollSignal": 1,
  "drafts": Array [
    Object {
      "draft": Object {
        "authKey": "subject",
        "entitySpec": Object {
          "adminOnly": false,
          "fields": Array [
            Object {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
        "fields": Array [
          Object {
            "fieldSpec": Object {
              "name": "title",
              "type": "String",
            },
            "value": null,
          },
        ],
        "name": "",
      },
      "entity": null,
      "entityWillBeUpdatedDueToUpsert": false,
      "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
      "status": "changed",
    },
  ],
  "schema": AdminSchema {
    "spec": Object {
      "entityTypes": Array [
        Object {
          "adminOnly": false,
          "fields": Array [
            Object {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
      ],
      "valueTypes": Array [],
    },
  },
  "status": "changed",
}
`;

exports[`SetNameAction set name of new draft 1`] = `
Object {
  "activeEntityEditorScrollSignal": 1,
  "activeEntityId": "619725d7-e583-4544-8bb0-23fc3c2870c0",
  "activeEntityMenuScrollSignal": 1,
  "drafts": Array [
    Object {
      "draft": Object {
        "authKey": null,
        "entitySpec": Object {
          "adminOnly": false,
          "fields": Array [
            Object {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
        "fields": Array [
          Object {
            "fieldSpec": Object {
              "name": "title",
              "type": "String",
            },
            "value": null,
          },
        ],
        "name": "New name",
      },
      "entity": null,
      "entityWillBeUpdatedDueToUpsert": false,
      "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
      "status": "changed",
    },
  ],
  "schema": AdminSchema {
    "spec": Object {
      "entityTypes": Array [
        Object {
          "adminOnly": false,
          "fields": Array [
            Object {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
      ],
      "valueTypes": Array [],
    },
  },
  "status": "changed",
}
`;

exports[`UpdateEntityAction add draft, update entity 1`] = `
Object {
  "activeEntityEditorScrollSignal": 1,
  "activeEntityId": "619725d7-e583-4544-8bb0-23fc3c2870c0",
  "activeEntityMenuScrollSignal": 1,
  "drafts": Array [
    Object {
      "draft": Object {
        "authKey": "none",
        "entitySpec": Object {
          "adminOnly": false,
          "fields": Array [
            Object {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
        "fields": Array [
          Object {
            "fieldSpec": Object {
              "name": "title",
              "type": "String",
            },
            "value": "Title",
          },
        ],
        "name": "Foo name",
      },
      "entity": Object {
        "fields": Object {
          "title": "Title",
        },
        "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
        "info": Object {
          "authKey": "none",
          "createdAt": "2022-04-30T07:51:25.56Z",
          "name": "Foo name",
          "status": "draft",
          "type": "Foo",
          "updatedAt": "2022-04-30T07:51:25.56Z",
          "version": 0,
        },
      },
      "entityWillBeUpdatedDueToUpsert": false,
      "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
      "status": "",
    },
  ],
  "schema": AdminSchema {
    "spec": Object {
      "entityTypes": Array [
        Object {
          "adminOnly": false,
          "fields": Array [
            Object {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
      ],
      "valueTypes": Array [],
    },
  },
  "status": "",
}
`;

exports[`UpdateEntityAction add draft, update entity 2`] = `
Object {
  "fields": Object {},
  "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
  "info": Object {
    "type": "Foo",
  },
}
`;

exports[`UpdateSchemaSpecificationAction add empty schema 1`] = `
Object {
  "activeEntityEditorScrollSignal": 0,
  "activeEntityId": null,
  "activeEntityMenuScrollSignal": 0,
  "drafts": Array [],
  "schema": AdminSchema {
    "spec": Object {
      "entityTypes": Array [],
      "valueTypes": Array [],
    },
  },
  "status": "",
}
`;
